# tinker-payments-py-sdk

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: mpesa.py  paystack.py  stripe.py
tests/: test_sdk.py
tinker/: __init__.py  api.py  auth.py  client.py  client.pyi  configuration.py  endpoints.py  exceptions.py  models.py  webhook.py
tinker/core/http/: __init__.py  auth_client.py  http_client.py  payment_client.py
tinker/core/schemas/: __init__.py  auth.py  exception.py  payment.py
tinker/core/utils/: config.py  exceptions.py
tinker/gateways/: __init__.py  mpesa.py  paystack.py  stripe.py
