[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinker-payments"
version = "0.1.0"
description = "Python SDK for Tinker payment gateway integrations"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Tinker Digital LTD", email = "create@tinker.co.ke" }
]
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.12.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/Tinker-Digital-Ltd/tinker-payments-py-sdk"

[tool.hatch.build.targets.wheel]
packages = ["tinker"]
