[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinker-payments"
version = "0.2.0"
description = "Python SDK for the standardized Tinker Payments API"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Tinker Digital LTD", email = "create@tinker.co.ke" }
]
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32.0"
]

[project.urls]
Homepage = "https://github.com/Tinker-Digital-Ltd/tinker-payments-py-sdk"

[tool.hatch.build.targets.wheel]
packages = ["tinker"]
include = ["tinker/py.typed", "tinker/*.pyi", "tinker/**.pyi" ]
